plugins {
    id("base")
}

tasks.withType(Jar).configureEach {
    enabled = false
}

allprojects {

    group = 'io.github.theodoremeyer.simplevoicegeyser'
    version = project.version

    repositories {
        mavenCentral()
        gradlePluginPortal()
        maven { url = uri('https://jitpack.io') }

        maven {
            url = uri("https://repo.maven.apache.org/maven2")
        }
        maven {
            url = uri("https://oss.sonatype.org/content/repositories/releases/")
        }
        maven {
            url = uri('https://hub.spigotmc.org/nexus/content/groups/public/')
        }
        maven {
            name = "henkelmax.public"
            url = 'https://maven.maxhenkel.de/repository/public'
        }
        maven {
            url = "https://repo.opencollab.dev/maven-snapshots"
            mavenContent {
                snapshotsOnly()
            }
        }
        maven {
            url = "https://repo.opencollab.dev/maven-releases"
            mavenContent {
                releasesOnly()
            }
        }
        maven {
            url = "https://repo.opencollab.dev/main/"
        }
        mavenLocal()
    }
}

subprojects {\
    apply plugin: "java"

    java {
        toolchain {
            languageVersion = JavaLanguageVersion.of(21)
        }
    }

    tasks.withType(JavaCompile).configureEach {
        options.encoding = "UTF-8"
        options.release.set(21)
    }

    tasks.withType(Jar).configureEach {
        from(rootProject.layout.projectDirectory.file("LICENSE")) {
            into("META-INF")
            rename { "SVG_LICENSE" }
        }
        from(rootProject.layout.projectDirectory.file("NOTICE")) {
            into("META-INF")
            rename { "SVG_NOTICE" }
        }
    }
}

tasks.register("collectJars", Copy) {
    group = "build"
    description = "Collect all module jars into root build/libs"

    // Depend only on tasks that actually exist
    dependsOn(subprojects.collectMany { p ->
        p.tasks.matching {
            it.name in ["shadowJar", "sourcesJar", "javadocJar", "build"]
        }
    })

    from(subprojects.collect { p ->
        p.layout.buildDirectory.dir("libs")
    })

    into(layout.buildDirectory.dir("libs"))

    duplicatesStrategy = DuplicatesStrategy.INCLUDE
}

tasks.named("build") {
    finalizedBy("collectJars")
}

